# bookit

./: Cargo.toml  README.md
.github/workflows/: rust-scheduled.yml  rust.yml
proptest-regressions/: book.txt
src/: alias.rs  book.rs  config.rs  contractors.rs  errors.rs  generics.rs  hours.rs  main.rs  utils.rs
src/db/: alias.rs  contractors.rs  hours.rs  mod.rs
src/db/migrations/: V0__initial.sql
