[package]
name = "bookit"
version = "0.1.0"
authors = ["Donatas Rasiukevicius <donatas@rasiukevicius.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
chrono = "0.4.13"
harsh = "0.2.0"
colored = "1.9.3"
read_input = "0.8.4"

[dev-dependencies]
proptest = "~0.9"
