[package]
name = "bookit"
version = "0.1.0"
authors = ["Donatas Rasiukevicius <donatas@rasiukevicius.dev>"]
edition = "2018"

[dependencies]
structopt = "0.3.15"
chrono = {version = "0.4.13", features=["serde"]}
harsh = "0.2.0"
colored = "1.9.3"
read_input = "0.8.4"
serde = {version="1.0.114", features=["derive"]}
serde_json = "1.0.56"
toml = "0.5.6"
serde_derive = "1.0.114"
pipeline = "0.5.0"
refinery = { version = "0.3", features = ["rusqlite"]}
rusqlite = { version = "0.23.1", features=["chrono"]}

[dev-dependencies]
proptest = "0.10.0"
